# Rubiks_Cube

./: My perception of the cube.txt  pyproject.toml
